--- a/app/views/union/landlords/new.html.erb
+++ b/app/views/union/landlords/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Landlord</h1>
-
 <%= render 'form', landlord: @landlord %>
 
-<%= link_to 'Back', union_landlords_path %>
+<%= render "shared/back_button" %>
