--- a/app/views/union/tenancies/edit.html.erb
+++ b/app/views/union/tenancies/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Tenancy</h1>
-
 <%= render 'form', tenancy: @tenancy %>
 
-<%= link_to 'Show', [:union, @tenancy] %> |
-<%= link_to 'Back', union_tenancies_path %>
+<%= render "shared/back_button" %>
