--- a/app/views/union/units/show.html.erb
+++ b/app/views/union/units/show.html.erb
@@ -1,55 +1,39 @@
-<p id="notice"><%= notice %></p>
+<%= render partial: "union/units/unit_card", object: @unit %>
 
-<dl>
-  <dt>Address:</dt>
-  <dd><%= @unit.address %></dd>
-
-  <dt>Number of Occupants:</dt>
-  <dd><%= @unit.number_of_occupants %></dd>
-
-  <dt>Building Type</dt>
-  <dd><%= Unit.building_types[@unit.building_type] %></dd>
-
-  <% if @unit.landlords.present? %>
-    <dt>Landlord(s)</dt>
-    <dd><%= @unit.landlords.map(&:name).join(', ') %></dd>
-  <% end %>
-</dl>
+<div class="grid gap-6 my-8 md:grid-cols-2 xl:grid-cols-2">
+<%= render partial: "tenancies/rating_card", object: @unit.ratings, locals: { score: :overall_average } %>
+<%= render partial: "tenancies/rating_card", object: @unit.ratings, locals: { score: :repairs_average } %>
+</div>
 
 <%if @tenancies.present? %>
-  <h2>Past Records</h2>
-  <table>
+  <h3 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">Past Records</h3>
+
+  <table class="w-full whitespace-no-wrap mb-8">
     <thead>
-      <tr>
-        <th>Start Date</th>
-        <th>End Date</th>
-        <th>Landlord</th>
-        <th>Rent</th>
-        <th>Rating</th>
+      <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
+        <th class="px-4 py-3">Start Date</th>
+        <th class="py-3">End Date</th>
+        <th class="py-3">Landlord</th>
+        <th class="py-3">Rent</th>
+        <th class="py-3">Rating</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
       <% @tenancies.each do |tenancy| %>
-      <tr>
-        <td><%= tenancy.start_date %></td>
-        <td><%= tenancy.end_date %></td>
-        <td><%= link_to tenancy.landlord.name, [:union, tenancy.landlord] %></td>
-        <td><%= composite_rent(tenancy) %></td>
-        <td><% if tenancy.overall.present? %><%= rating_icon(tenancy.overall) %> / <%= rating_icon(tenancy.repairs) %><% end %></td>
+      <tr class="text-gray-700 dark:text-gray-400">
+        <td class="px-4 py-3"><%= tenancy.start_date %></td>
+        <td class="py-3"><%= tenancy.end_date %></td>
+        <td class="py-3"><%= link_to tenancy.landlord.name, [:union, tenancy.landlord] %></td>
+        <td class="py-3"><%= composite_rent(tenancy) %></td>
+        <td class="py-3"><% if tenancy.overall.present? %><%= rating_icon(tenancy.overall) %> / <%= rating_icon(tenancy.repairs) %><% end %></td>
       </tr>
       <% end %>
     </tbody>
   </table>
-
-  <h2>Reviews of this Place</h2>
-  <% @tenancies.each do |tenancy| %>
-    <article class="review">
-      <h3>Public</h3>
-      <%= tenancy.public_review %>
-      <h3>Private</h3>
-      <%= tenancy.private_review %>
-    </article>
-  <% end %>
 <% end %>
-<%= link_to 'Edit', edit_union_unit_path(@unit) if can? :edit, @unit %> |
-<%= link_to 'Back', union_units_path %>
+
+<h3 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">Reviews of this Unit</h3>
+<%= render partial: "union/tenancies/review_card", collection: @tenancies %>
+
+<%= render("shared/edit_button", target: edit_union_unit_path(@unit)) if can? :edit, @unit %>
+<%= render "shared/back_button" %>
