--- a/app/views/landlords/show.html.erb
+++ b/app/views/landlords/show.html.erb
@@ -1,21 +1,14 @@
-<p id="notice"><%= notice %></p>
+<div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-2">
+<%= render partial: "tenancies/rating_card", object: @landlord.ratings, locals: { score: :overall_average } %>
+<%= render partial: "tenancies/rating_card", object: @landlord.ratings, locals: { score: :repairs_average } %>
+</div>
 
-<h1><%= @landlord.name %></h1>
-<dl>
-  <dt>Overall Rating Average</dt>
-  <%= rating_grade(@landlord.ratings.overall_average, :dd) %>
-  
-  <dt>Repairs Rating Average</dt>
-  <%= rating_grade(@landlord.ratings.repairs_average, :dd) %>
-</dl>
 
 <h2>Known Units</h2>
-<ul>
-<% @units.each do |unit| %>
-  <li><%= link_to unit.address, unit %> (Average Rating: <%= rating_grade(@landlord.ratings.overall_average) %> | Reviewed <%= @landlord.ratings.size %> times )</li>
-<% end %>
-</ul>
+<div class="grid gap-6 mb-8 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+  <%= render partial: "units/unit_card", collection: @units %>
+</div>
 
 <%= render partial: "tenancies/review_table", object: @landlord.tenancies %>
 
-<%= link_to 'Back', landlords_path %>
+<%= render partial: "shared/back_button" %>
