--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -1,100 +1,82 @@
 <%= content_for(:head) do %>
-  <style type="text/css">
-    body {
-      background-color: #DADADA;
-    }
-    body > .grid {
-      height: 100%;
-    }
-    .image {
-      margin-top: -100px;
-    }
-    .column {
-      max-width: 450px;
-    }
-  </style>
-  <script>
-  $(document)
-    .ready(function() {
-      $('.ui.form')
-        .form({
-          fields: {
-            email: {
-              identifier  : 'email',
-              rules: [
-                {
-                  type   : 'empty',
-                  prompt : 'Please enter your e-mail'
-                },
-                {
-                  type   : 'email',
-                  prompt : 'Please enter a valid e-mail'
-                }
-              ]
-            },
-            password: {
-              identifier  : 'password',
-              rules: [
-                {
-                  type   : 'empty',
-                  prompt : 'Please enter your password'
-                },
-                {
-                  type   : 'length[6]',
-                  prompt : 'Your password must be at least 6 characters'
-                }
-              ]
-            }
-          }
-        })
-      ;
-    })
-  ;
-  </script>
 <% end %>
 
-<div class="ui middle aligned center aligned grid">
-  <div class="column">
-    <h2 class="ui teal image header">
-      <img src="#" class="image">
-      <div class="content">
-        Log-in to your account
-      </div>
-    </h2>
 
-    <%= form_for(resource, as: resource_name, url: session_path(resource_name), class: "ui large form") do |f| %>
+<div class="flex items-center min-h-screen p-6 bg-gray-50 dark:bg-gray-900">
+  <div
+    class="flex-1 h-full max-w-4xl mx-auto overflow-hidden bg-white rounded-lg shadow-xl dark:bg-gray-800"
+  >
+    <div class="flex flex-col overflow-y-auto md:flex-row">
+      <div class="h-32 md:h-auto md:w-1/2">
+        <img
+          aria-hidden="true"
+          class="object-cover w-full h-full dark:hidden"
+          src="../assets/img/login-office.jpeg"
+          alt="Office"
+        />
+        <img
+          aria-hidden="true"
+          class="hidden object-cover w-full h-full dark:block"
+          src="../assets/img/login-office-dark.jpeg"
+          alt="Office"
+        />
+      </div>
+      <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
+        <%= form_for(resource, as: resource_name, url: session_path(resource_name), class: "ui large form") do |f| %>
     
-      <div class="ui stacked segment">
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="user icon"></i>
-            <%= f.label :email, class: 'sr-only' %>
-            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'E-mail' %>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui left icon input">
-            <i class="lock icon"></i>
-            <%= f.label :password, class: 'sr-only' %>
-            <%= f.password_field :password, autocomplete: "current-password", placeholder: 'Password' %>
-          </div>
-        </div>
-        <% if devise_mapping.rememberable? %>
-          <div class="field">
-            <%= f.check_box :remember_me %>
-            <%= f.label :remember_me %>
-          </div>
-        <% end %>
 
-        <%= f.submit "Log in", class: "ui fluid large teal submit button" %>
+        <div class="w-full">
+          <h1
+            class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200"
+          >
+            Login
+          </h1>
+          <%= f.label :email, class: 'block text-sm' do %>
+            <span class="text-gray-700 dark:text-gray-400">Email</span>
+          
+
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input', placeholder: 'E-mail' %>
+          <% end %>
+
+
+          <%= f.label :password, class: 'block mt-4 text-sm' do %>
+            <span class="text-gray-700 dark:text-gray-400">Password</span>
+            <%= f.password_field :password, autocomplete: "current-password", placeholder: 'Password', class: 'block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input' %>
+          <% end %>
+
+          <% if devise_mapping.rememberable? %>
+            <div class="field">
+              <%= f.check_box :remember_me %>
+              <%= f.label :remember_me %>
+            </div>
+          <% end %>
+          
+          <!-- You should use a button here, as the anchor is only used for the example  -->
+          <%= f.submit "Log in", class: "block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple" %>
+
+          <hr class="my-8" />
+
+        <%= render "devise/shared/links", classes: "text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"  %>
+
+          <p class="mt-4">
+            <a
+              class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
+              href="./forgot-password.html"
+            >
+              Forgot your password?
+            </a>
+          </p>
+          <p class="mt-1">
+            <a
+              class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
+              href="./create-account.html"
+            >
+              Create account
+            </a>
+          </p>
+        </div>
+      <% end %>
       </div>
-
-      <div class="ui error message"></div>
-
-    <% end %>
-
-    <div class="ui message">
-      <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
