--- a/app/views/layouts/basic.html.erb
+++ b/app/views/layouts/basic.html.erb
@@ -1,88 +1,32 @@
 <% content_for(:head) do %>
-<style type="text/css">
-  body {
-    background-color: #FFFFFF;
-  }
-  .ui.menu .item img.logo {
-    margin-right: 1.5em;
-  }
-  .main.container {
-    margin-top: 7em;
-  }
-  .wireframe {
-    margin-top: 2em;
-  }
-  .ui.footer.segment {
-    margin: 5em 0em 0em;
-    padding: 5em 0em;
-  }
-  </style>
 <% end %>
 
 <% content_for(:content) do %>
-<div class="ui fixed inverted menu">
-    <div class="ui container">
-<%= link_to 'ITU Thingy', root_path, class: "header item" %>
-      <div class="ui simple dropdown item">
-        Public <i class="dropdown icon"></i>
-        <div class="menu">
-          <%= link_to "Landlords", landlords_path, class: "item" %>
-          <%= link_to "Units", units_path, class: "item" %>
-          <%= link_to "Ratings", ratings_path, class: "item" %>
+<div
+  class="flex h-screen bg-gray-50 dark:bg-gray-900"
+  :class="{ 'overflow-hidden': isSideMenuOpen }"
+>
+
+    <%= render partial: "layouts/sidenav" %>
+
+    <div class="flex flex-col flex-1 w-full">
+      <%= render partial: "layouts/topnav" %>
+
+      <main class="h-full pb-16 overflow-y-auto">
+        
+        <% flash.each do |type, msg| %>
+          <%= render partial: "shared/alerts/#{type.to_s}", object: msg %>
+        <% end %>
+
+        <div class="container px-6 mx-auto grid">
+          <h2
+            class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200"
+          >
+            <%= @title || "" %>
+          </h2>
+          <%= yield %>
         </div>
-      </div>
-
-      <% if current_user %>
-      <div class="ui simple dropdown item">
-        Union <i class="dropdown icon"></i>
-        <div class="menu">
-          <%= link_to "Landlords", union_landlords_path, class: "item" %>
-          <%= link_to "Units", union_units_path, class: "item" %>
-          <%= link_to "Tenancies", union_tenancies_path, class: "item" %>
-
-<!--
-          <a class="item" href="#">Link Item</a>
-          <a class="item" href="#">Link Item</a>
-          <div class="divider"></div>
-          <div class="header">Header Item</div>
-          <div class="item">
-            <i class="dropdown icon"></i>
-            Sub Menu
-            <div class="menu">
-              <a class="item" href="#">Link Item</a>
-              <a class="item" href="#">Link Item</a>
-            </div>
-          </div>
-          <a class="item" href="#">Link Item</a>
-        -->
-        </div>
-      </div>
-      <% end %>
-
-      <% unless current_user %>
-        <%= link_to "Join ITU", new_user_registration_path, class: 'item' %>
-      <% end %>
-
-      <div class="ui simple dropdown item">
-        Account <i class="dropdown icon"></i>
-        <div class="menu">
-          <% if current_user %>
-            <div class="header">Signed in as <%= current_user.email %></div>
-            <%= link_to('Profile', profile_path, class: 'item') %>
-            <%= link_to('Account',
-              edit_user_registration_path, class: 'item') %>
-            <%= link_to('Sign out',  destroy_user_session_path, :method => 'delete', class: 'item') %>
-          <% else %>
-            <%= link_to "Sign in", new_user_session_path, class: 'item' %>
-          <% end %>
-        </div>
-      </div>
-      <%= link_to "Ithaca TU", 'https://ithacatu.org', class: 'item' %>
+      </main>
     </div>
-  </div>
-
-  <div class="ui main text container">
-    <%= yield %>
-  </div>
 <% end %>
 <%= render template: "layouts/application" %>
