--- a/app/views/tenancies/_review_table.html.erb
+++ b/app/views/tenancies/_review_table.html.erb
@@ -1,17 +1,17 @@
 <h2>Reviews</h2>
-<table>
+<table class="w-full whitespace-no-wrap">
   <thead>
-    <tr>
-      <th>Overall</th>
-      <th>Repairs</th>
-      <th>Brief</th>
+    <tr class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
+      <th class="px-4 py-3">Overall</th>
+      <th class="px-4 py-3">Repairs</th>
+      <th class="px-4 py-3">Brief</th>
   </thead>
-  <tbody>
+  <tbody class="bg-white divide-y dark:divide-gray-700 dark:bg-gray-800">
   <% review_table.each do |tenancy| %>
-    <tr>
-      <td><%= rating_icon(tenancy.overall) %></td>
-      <td><%= rating_icon(tenancy.repairs) %></td>
-      <td><%= tenancy.public_review[0..300] %> (<%= link_to 'Read Full', rating_path(tenancy) %>)</td>
+    <tr class="text-gray-700 dark:text-gray-400">
+      <td class="px-4 py-3"><%= rating_icon(tenancy.overall) %></td>
+      <td class="px-4 py-3"><%= rating_icon(tenancy.repairs) %></td>
+      <td class="px-4 py-3"><%= tenancy.public_review[0..300] %> (<%= link_to 'Read Full', rating_path(tenancy) %>)</td>
     </tr>
   <% end %>
   </tbody>
