--- a/app/views/union/landlords/edit.html.erb
+++ b/app/views/union/landlords/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Landlord</h1>
-
 <%= render 'form', landlord: @landlord %>
 
-<%= link_to 'Show', @landlord %> |
-<%= link_to 'Back', landlords_path %>
+<%= render "shared/back_button" %>
