--- a/app/views/union/tenancies/_form.html.erb
+++ b/app/views/union/tenancies/_form.html.erb
@@ -11,62 +11,88 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :unit_id %>
-    <%= form.collection_select :unit_id, @units, :id, :address %>
+  <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+    <%= form.label :unit_id, class: "block text-sm" do %>
+      <span class="text-gray-700 dark:text-gray-400">Unit</span>
+      <%= form.collection_select :unit_id, @units, :id, :address, {}, { class: "block w-full p-2 mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:focus:shadow-outline-gray" } %>
+    <% end %>
   </div>
 
-  <div class="field">
-    <%= form.label :rent_total, "The total monthly rent" %>
-    <%= form.text_field :rent_total %>
-  </div>
+  <div class="grid gap-6 mb-8 md:grid-cols-2">
+    <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+        <%= form.label :rent_portion, class: "block text-sm" do %>
+          <span class="text-gray-700 dark:text-gray-400">The portion of rent you pay</span>
+          <%= form.text_field :rent_portion, class: "block w-full mt-1 p-2 text-md dark:border-gray-600 dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:text-gray-300 dark:focus:shadow-outline-gray form-input" %>
+        <% end %>
+    </div>
 
-  <div class="field">
-    <%= form.label :rent_portion, "The portion of rent you pay" %>
-    <%= form.text_field :rent_portion %>
-  </div>
-
-  <div class="field">
-    <%= form.label :landlord_id %>
-    <%= form.collection_select :landlord_id, @landlords, :id, :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :start_date %>
-    <%= form.date_field :start_date %>
-  </div>
-
-  <div class="field">
-    <%= form.label :end_date %>
-    <%= form.date_field :end_date, include_blank: true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :overall, "Overall Rating", for: 'overall' %>
-    <div class="rating">
-      <%= form.collection_radio_buttons :overall, [['0', icon('fas', "angry", 'Awful')] ,['1', icon('fas', "frown", 'Poor')], ['2', icon('fas', 'meh', 'OK')], ['3', icon('fas', "smile", "Good")]], :first, :last %>
+    <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+      <%= form.label :rent_total, class: "block text-sm" do %>
+        <span class="text-gray-700 dark:text-gray-400">The total monthly rent</span>
+        <%= form.text_field :rent_total, class: "block w-full mt-1 p-2 text-md dark:border-gray-600 dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:text-gray-300 dark:focus:shadow-outline-gray form-input" %>
+      <% end %>
     </div>
   </div>
+  
 
-  <div class="field">
-    <%= form.label :repairs, "Repairs (if applicable)", for: 'repairs' %>
-    <div class="rating">
-      <%= form.collection_radio_buttons :repairs, [['0', icon('fas', "angry", 'Awful')] ,['1', icon('fas', "frown", 'Poor')], ['2', icon('fas', 'meh', 'OK')], ['3', icon('fas', "smile", "Good")], ['', icon('fas', 'comment-slash', 'N/A')]], :first, :last %>
+  <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+    <%= form.label :landlord_id, class: "block text-sm" do %>
+    <span class="text-gray-700 dark:text-gray-400">Landlord</span>
+      <%= form.collection_select :landlord_id, @landlords, :id, :name, {}, { class: "block w-full p-2 mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:focus:shadow-outline-gray" } %>
+    <% end %>
+  </div>
+
+  <div class="grid gap-6 mb-8 md:grid-cols-2">
+    <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+      <%= form.label :start_date, class: "block text-sm" do %>
+        <span class="text-gray-700 dark:text-gray-400">Start Date</span>
+        <%= form.date_field :start_date, class: "block w-full mt-1 p-2 text-md dark:border-gray-600 dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:text-gray-300 dark:focus:shadow-outline-gray form-input" %>
+      <% end %>
     </div>
+
+      <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+        <%= form.label :end_date, class: "block text-sm" do %>
+          <span class="text-gray-700 dark:text-gray-400">End Date</span>
+          <%= form.date_field :end_date, include_blank: true, class: "block w-full mt-1 p-2 text-md dark:border-gray-600 dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:text-gray-300 dark:focus:shadow-outline-gray form-input" %>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="grid gap-6 mb-8 md:grid-cols-2">
+      <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+      <%= form.label :overall, class: "block text-sm field" do %>
+        <span class="text-gray-700 dark:text-gray-400">Overall Rating</span>
+        <div class="rating">
+          <%= form.collection_radio_buttons :overall, [['0', icon('fas', "angry", 'Awful')] ,['1', icon('fas', "frown", 'Poor')], ['2', icon('fas', 'meh', 'OK')], ['3', icon('fas', "smile", "Good")]], :first, :last %>
+        </div>
+      <% end %>
+    </div>
+
+      <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+        <%= form.label :repairs, class: "block text-sm field" do %>
+          <span class="text-gray-700 dark:text-gray-400">Repairs Rating</span>
+          <div class="rating">
+            <%= form.collection_radio_buttons :repairs, [['0', icon('fas', "angry", 'Awful')] ,['1', icon('fas', "frown", 'Poor')], ['2', icon('fas', 'meh', 'OK')], ['3', icon('fas', "smile", "Good")], ['', icon('fas', 'comment-slash', 'N/A')]], :first, :last %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+    <%= form.label :public_review, class: "block text-sm" do %>
+      <span class="text-gray-700 dark:text-gray-400"><strong>Public:</strong> This text will be visible to everyone, including users who are not signed-in</span>
+      <%= form.text_area :public_review, class: "block w-full mt-1 p-2 text-md dark:border-gray-600 dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:text-gray-300 dark:focus:shadow-outline-gray form-input" %>
+    <% end %>
   </div>
 
-  <div class="field">
-    <%= form.label :public_review, "This text will be visible to everyone, including users who are not signed-in" %>
-    <%= form.text_area :public_review %>
-  </div>
-
-  <div class="field">
-    <label></label>
-    <%= form.label :private_review, "This Text Will Only Be Visible by Union Members, who are signed-in" %>
-    <%= form.text_area :private_review %>
+    <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
+    <%= form.label :private_review, class: "block text-sm" do %>
+      <span class="text-gray-700 dark:text-gray-400"><strong>Private</strong>: This Text Will Only Be Visible by Union Members, who are signed-in</span>
+      <%= form.text_area :private_review, class: "block w-full mt-1 p-2 text-md dark:border-gray-600 dark:bg-gray-700 focus:border-red-400 focus:outline-none focus:shadow-outline-red dark:text-gray-300 dark:focus:shadow-outline-gray form-input" %>
+    <% end %>
   </div>
 
   <div class="actions">
-    <%= form.submit class: 'ui button' %>
+    <%= form.submit class: "px-5 py-3 font-medium leading-5 text-white transition-colors duration-150 bg-red-600 border border-transparent rounded-lg active:bg-red-600 hover:bg-red-700 focus:outline-none focus:shadow-outline-red" %>
   </div>
 <% end %>
