--- a/app/views/union/tenancies/new.html.erb
+++ b/app/views/union/tenancies/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Tenancy</h1>
-
 <%= render 'form', tenancy: @tenancy %>
 
-<%= link_to 'Back', union_tenancies_path %>
+<%= render "shared/back_button" %>
