--- a/app/views/union/tenancies/show.html.erb
+++ b/app/views/union/tenancies/show.html.erb
@@ -1,41 +1,23 @@
-<h1>Tenancy</h1>
+  <h3 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">
+    Period: <%= @tenancy.start_date %> - <%= @tenancy.end_date || "Present" %>
+  </h3>
+  <article class="grid gap-6 mb-8 md:grid-cols-2">
+    <div class="min-w-0 p-4 bg-white rounded-lg shadow-xs dark:bg-gray-800">
+      <p class="text-gray-600 dark:text-gray-400">
+        Unit: <%= link_to @tenancy.unit.address, [:union, @tenancy.unit] %></p>
+      <p class="text-gray-600 dark:text-gray-400">
+        Landlord: <%= link_to @tenancy.landlord, [:union, @tenancy.landlord]  %></p>
+      <p class="text-gray-600 dark:text-gray-400">
+        Period: <%= @tenancy.start_date %> - <%= @tenancy.end_date || "Present" %></p>
+      <p class="text-gray-600 dark:text-gray-400">
+        Rent: <%= composite_rent(@tenancy) %></p>
+      <p class="text-gray-600 dark:text-gray-400">
+        Rating: <%= rating_icon(@tenancy.overall) %> / <%= rating_icon(@tenancy.repairs) %></p>
+    </div>
+  </article>
 
-<dl>
-</dt>Tenant</dt>
-<dd><%= @tenancy.tenant == current_user ? "Me" : @tenancy.tenant.to_s %></dd>
+  <%= render partial: "union/tenancies/review_card", object: @tenancy %>
 
-<dt>Unit</dt>
-<dd><%= link_to @tenancy.unit.address, [:union, @tenancy.unit] %></dd>
-
-<dt>Rent</dt>
-<dd><%= composite_rent(@tenancy) %></dd>
-
-<dt>Landlord</dt>
-<dd><%= link_to @tenancy.landlord.name, [:union, @tenancy.landlord] %></dd>
-
-<dt>Period</dt>
-<dd><%= @tenancy.start_date %> - <%= @tenancy.end_date %></dd>
-
-  <% if @tenancy.present? %>
-<dt>Rating</dt>
-<dd>
-
-  <%= rating_icon(@tenancy.overall) %> / <%= rating_icon(@tenancy.repairs) %>
-    
-  </dd>
-  <% end %>
-
-<dt>Public Review</dt>
-<dd>
-  <%= @tenancy.public_review %>
-</dd>
-
-<dt>Private Review</dt>
-<dd>
-  <%= @tenancy.private_review %>
-</dd>
-</dl>
-
-<% if can? :edit, @tenancy %>
-  <%= link_to "Edit", [:edit, :union, @tenancy] %> | <%= link_to "View All", union_tenancies_path %>
-  <% end %>
+<%= render("shared/edit_button", target: edit_union_tenancy_path(@tenancy)) if can? :edit, @tenancy %>
+<%= render "shared/back_button" %>
+  
