Adds fields to form and show

--- a/app/views/union/units/_form.html.erb
+++ b/app/views/union/units/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :address %>
   </div>
 
+  <div class="field">
+    <%= form.label :number_of_occupants %>
+    <%= form.text_field :number_of_occupants %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
