--- a/app/views/union/units/index.html.erb
+++ b/app/views/union/units/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Address</th>
       <th>Landlord</th>
+      <th>Building Type</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= link_to unit.address, [:union, unit] %></td>
         <td><%= unit.landlords.map(&:name).join(', ') %></td>
+        <td><%= Unit.building_types[unit.building_type] %></td>
         <td><%= edit_link(edit_union_unit_path(unit)) if can? :edit, unit %></td>
         <td><%= destroy_link unit if can? :destroy, unit %></td>
       </tr>
