--- a/app/views/shared/alerts/_error.html.erb
+++ b/app/views/shared/alerts/_error.html.erb
@@ -1,20 +1,5 @@
-<!-- Danger alert -->
-<div class="flex bg-red-200 p-4">
-  <div class="mr-4">
-    <div class="h-10 w-10 text-white bg-red-600 rounded-full flex justify-center items-center">
-      <i class="material-icons">report</i>
-    </div>
-  </div>
-  <div class="flex justify-between w-full">
-    <div class="text-red-600">
-      <p class="mb-2 font-bold">
-        Error
-      </p>
-      <p class="text-xs">
-        <%= error %>
-      </p>
-    </div>
-    <div class="text-sm text-gray-500">
-      <p>x</p>
-    </div>
-  </div>
+<div class="flash error red inverted ui segment">
+    <%= icon('fas', 'dumpster-fire') %>
+    <p><%= error %></p>
+    <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
+</div>
