--- a/app/views/shared/alerts/_notice.html.erb
+++ b/app/views/shared/alerts/_notice.html.erb
@@ -1,21 +1,5 @@
-<!-- Success alert -->
-<div class="flex bg-green-200 p-4">
-  <div class="mr-4">
-    <div class="h-10 w-10 text-white bg-green-600 rounded-full flex justify-center items-center">
-      <%= icon('fas', 'check') %>
-    </div>
-  </div>
-  <div class="flex justify-between w-full">
-    <div class="text-green-600">
-      <p class="mb-2 font-bold">
-        Notice
-      </p>
-      <p class="text-xs">
-        <%= notice %>
-      </p>
-    </div>
-    <div class="text-sm text-gray-500">
-       <span>x</span>
-    </div>
-  </div>
+<div class="flash success green inverted ui segment">
+    <%= icon('fas', 'check') %>
+    <p><%= notice %></p>
+    <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
 </div>
