--- a/app/views/shared/alerts/_warning.html.erb
+++ b/app/views/shared/alerts/_warning.html.erb
@@ -1,21 +1,5 @@
-<!-- Warning alert -->
-<div class="flex bg-orange-200 p-4">
-  <div class="mr-4">
-    <div class="h-10 w-10 text-white bg-orange-600 rounded-full flex justify-center items-center">
-      <i class="material-icons">warning</i>
-    </div>
-  </div>
-  <div class="flex justify-between w-full">
-    <div class="text-orange-600">
-      <p class="mb-2 font-bold">
-        Warning
-      </p>
-      <p class="text-xs">
-        <%= warning %>
-      </p>
-    </div>
-    <div class="text-sm text-gray-500">
-       <span>x</span>
-    </div>
-  </div>
+<div class="flash warning orange inverted ui segment">
+    <%= icon('fas', 'exclamation-triangle') %>
+    <p><%= warning %></p>
+    <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
 </div>
