--- a/app/views/shared/_back_button.html.erb
+++ b/app/views/shared/_back_button.html.erb
@@ -1,4 +1,4 @@
-<%= link_to :back do %>  
+<%= link_to :back, class: "back ui button blue inverted" do %>  
   <%= icon('fas', 'arrow-left') %>
   Back
 <% end %>
