--- a/app/views/shared/alerts/_alert.html.erb
+++ b/app/views/shared/alerts/_alert.html.erb
@@ -1,4 +1,4 @@
-<div class="flash alert yellow inverted ui segment">
+<div class="ui icon message flash alert yellow inverted">
     <%= icon('fas', 'exclamation-circle') %>
     <p><%= alert %></p>
     <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
