--- a/app/views/shared/alerts/_error.html.erb
+++ b/app/views/shared/alerts/_error.html.erb
@@ -1,4 +1,4 @@
-<div class="flash error red inverted ui segment">
+<div class="ui icon message flash error red inverted">
     <%= icon('fas', 'dumpster-fire') %>
     <p><%= error %></p>
     <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
