--- a/app/views/shared/alerts/_notice.html.erb
+++ b/app/views/shared/alerts/_notice.html.erb
@@ -1,4 +1,4 @@
-<div class="flash success green inverted ui segment">
+<div class="ui icon message flash success green inverted">
     <%= icon('fas', 'check') %>
     <p><%= notice %></p>
     <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
