--- a/app/views/shared/alerts/_warning.html.erb
+++ b/app/views/shared/alerts/_warning.html.erb
@@ -1,4 +1,4 @@
-<div class="flash warning orange inverted ui segment">
+<div class="ui icon message flash warning orange inverted">
     <%= icon('fas', 'exclamation-triangle') %>
     <p><%= warning %></p>
     <a class="close" href="javascript:void(0)"><%= icon('fas', 'times') %></a>
