layout cleanup in public area

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,4 +50,12 @@ body {
       margin-bottom: 0;
     }
   }
+
+  form.ui {
+    margin-bottom: 2rem;
+  }
+
+  a.label.circular {
+    cursor: default !important;
+  }
 }
