--- a/app/views/tenancies/_review_table.html.erb
+++ b/app/views/tenancies/_review_table.html.erb
@@ -1,5 +1,5 @@
 <h2>Reviews</h2>
-<table>
+<table class="ui celled table">
   <thead>
     <tr>
       <th>Overall</th>
@@ -9,9 +9,9 @@
   <tbody>
   <% review_table.each do |tenancy| %>
     <tr>
-      <td><%= rating_icon(tenancy.overall) %></td>
-      <td><%= rating_icon(tenancy.repairs) %></td>
-      <td><%= tenancy.public_review[0..300] %> (<%= link_to 'Read Full', rating_path(tenancy) %>)</td>
+      <td data-label="Overall Rating"><%= rating_icon(tenancy.overall) %></td>
+      <td data-label="Repairs Rating"><%= rating_icon(tenancy.repairs) %></td>
+      <td data-label="Brief Review"><%= tenancy.public_review[0..300] %> (<%= link_to 'Read Full', rating_path(tenancy) %>)</td>
     </tr>
   <% end %>
   </tbody>
