--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="ui cards">
   <%= render partial: "tenancies/rating_card", object: @unit.ratings, locals: { score: :overall_average } %>
   <%= render partial: "tenancies/rating_card", object: @unit.ratings, locals: { score: :repairs_average } %>
 </div>
