--- a/app/views/landlords/show.html.erb
+++ b/app/views/landlords/show.html.erb
@@ -1,11 +1,11 @@
-<div class="grid gap-6 mb-8 md:grid-cols-2 xl:grid-cols-2">
+<div class="ui cards">
 <%= render partial: "tenancies/rating_card", object: @landlord.ratings, locals: { score: :overall_average } %>
 <%= render partial: "tenancies/rating_card", object: @landlord.ratings, locals: { score: :repairs_average } %>
 </div>
 
 
 <h2>Known Units</h2>
-<div class="grid gap-6 mb-8 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+<div class="ui cards">
   <%= render partial: "units/unit_card", collection: @units %>
 </div>
 
