--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  *= require_self
  */
 
+@import 'easy-autocomplete/dist/easy-autocomplete';
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
