--- a/app/views/union/tenancies/index.html.erb
+++ b/app/views/union/tenancies/index.html.erb
@@ -15,8 +15,8 @@
   <tbody>
     <% @my_tenancies.each do |tenancy| %>
       <tr>
-        <td><%= link_to tenancy.landlord.name, [:union, tenancy.landlord] %></td>
-        <td><%= link_to tenancy.unit.address, [:union, tenancy.unit] %></td>
+        <td><%= link_to tenancy.landlord.name, tenancy.landlord %></td>
+        <td><%= link_to tenancy.unit.address, tenancy.unit %></td>
         <td><%= composite_rent(tenancy) %></td>
         <td><%= tenancy.start_date.strftime('%Y') %><%= tenancy.end_date&.strftime(' - %Y') %></td>
         <td><%= render partial: "tenancy_rating", object: tenancy %></td>
@@ -45,8 +45,8 @@
   <tbody>
     <% @other_tenancies.each do |tenancy| %>
       <tr>
-        <td><%= link_to tenancy.landlord.name, [:union, tenancy.landlord] %></td>
-        <td><%= link_to tenancy.unit.address, [:union, tenancy.unit] %></td>
+        <td><%= link_to tenancy.landlord.name, tenancy.landlord %></td>
+        <td><%= link_to tenancy.unit.address, tenancy.unit %></td>
         <td><%= composite_rent(tenancy) %></td>
         <td><%= tenancy.start_date.strftime('%Y') %><%= tenancy.end_date&.strftime(' - %Y') %></td>
         <td><%= render partial: "tenancy_rating", object: tenancy %></td>
